# LibIO

./: CMakeLists.txt  README.md  library.cpp
.github/workflows/: build.yml  testing.yml
cmake/: X11.cmake
include/LibIO/: LibIO.hpp
include/LibIO/clipboard/: ClipboardControls.hpp  Linux.hpp  Windows.hpp
include/LibIO/internals/: platform_dispatch.hpp
include/LibIO/keyboard/: KeyboardControls.hpp  Linux.hpp  Windows.hpp
include/LibIO/mouse/: Linux.hpp  MouseControls.hpp  Windows.hpp
src/clipboard/: ClipboardControls.cpp  Linux.cpp  Windows.cpp
src/keyboard/: KeyboardControls.cpp  Linux.cpp  Windows.cpp
src/mouse/: Linux.cpp  MouseControls.cpp  Windows.cpp
